ndb - bug#41915 - fix spurious crash in recovery of DD tables