storage/ndb/src/kernel/blocks/dblqh/DblqhMain.cpp
@@ -11848,6 +11848,11 @@ void Dblqh::execLCP_PREPARE_CONF(Signal* signal)
 	SET_ERROR_INSERT_VALUE(5027);
 	sendSignalWithDelay(reference(), GSN_START_RECREQ, signal, 10000, 1);
       }
+      else if (ERROR_INSERTED(5053))
+      {
+        sendSignalWithDelay(BACKUP_REF, GSN_BACKUP_FRAGMENT_REQ, signal,
+                            150, BackupFragmentReq::SignalLength);
+      }
       else
       {
 	sendSignal(BACKUP_REF, GSN_BACKUP_FRAGMENT_REQ, signal, 
